--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Marvel">
+            android:theme="@style/Theme.Marvel.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
